Fix FieldDisplay component wrapping problem

--- a/src/components/Field/FieldDisplay/FieldDisplay.module.scss
+++ b/src/components/Field/FieldDisplay/FieldDisplay.module.scss
@@ -1,6 +1,6 @@
 .FieldDisplay {
   cursor: pointer;
-  white-space: pre;
+  white-space: pre-wrap;
 
   &:hover {
     color: grey;
